# TransitMind-Sogamoso

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  implementation_plan.md  installed_requirements.txt  pyproject.toml  requirements.txt  run.ps1
.github/workflows/: cd_deploy.yml  ci_train.yml  data_drift.yml
configs/: agents_config.yaml  data_schema.yaml  layer4_config.yaml  llm_config.yaml  mlflow_config.yaml  timegan_config.yaml
data/layer4_outputs/: validation_report.json
data/validation/: pilot_av_castellana.csv  pilot_carrera11.csv
docs/: arquitectura.md  mlops_runbook.md  tstr_protocol.md  variables_trafico.md
models/registry/: .gitkeep
models/timegan/: model_card.md
pipelines/: pipeline_evaluate_tstr.py  pipeline_full.py  pipeline_generate_data.py  pipeline_layer2.py  pipeline_layer3.py  pipeline_layer4.py  pipeline_train_timegan.py
src/layer1_timegan/: __init__.py  api.py  data_loader.py  evaluator.py  generator.py  timegan_model.py  trainer.py
src/layer2_llm/: __init__.py  api.py  causal_analyst.py  context_builder.py  rag_pipeline.py
src/layer3_agents/: __init__.py  agent_causal_analyst.py  agent_gan_simulator.py  agent_monitor.py  agent_predictor.py  agent_route_planner.py  agent_sensor.py  agent_traffic_coord.py  api.py  graph_state.py  orchestrator.py
src/layer4_bots/: __init__.py  alert_engine.py  api.py  dashboard.py  message_formatter.py  social_graph.py  telegram_bot.py  whatsapp_handler.py
src/shared/: __init__.py  constants.py  logger.py  schemas.py  utils.py
tests/: conftest.py
tests/integration/: test_layer4.py  test_pipeline_generate.py  test_tstr_protocol.py
tests/unit/: test_agents.py  (+5 more)
(+35 files in other folders)
