[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "transitmind-sogamoso"
version = "1.0.0"
description = "TransitMind Sogamoso — Sistema de IA para movilidad urbana con TimeGAN y Multi-Agentes"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "UPTC — Universidad Pedagógica y Tecnológica de Colombia"},
]
keywords = ["traffic", "timegan", "mlops", "synthetic-data", "sogamoso"]

dependencies = [
    "torch>=2.2.0",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "scikit-learn>=1.4.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "PyYAML>=6.0.1",
    "mlflow>=2.10.0",
    "tqdm>=4.66.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "plotly>=5.18.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "structlog>=24.1.0",
    "joblib>=1.3.0",
    "scipy>=1.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
]
agents = [
    "langchain>=0.2.0",
    "langgraph>=0.1.0",
    "langchain-community>=0.2.0",
    "llama-index>=0.10.0",
    "chromadb>=0.4.0",
]
bots = [
    "python-telegram-bot>=21.0",
    "streamlit>=1.32.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "pipelines*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
